Cambios en el gateway

--- a/gateway-service.yaml
+++ b/gateway-service.yaml
@@ -34,8 +34,16 @@ spring:
         - id: rdr-ingreso-service
           uri: lb://rdr-ingreso-service
           predicates:
-            - Path=/api/v1/repEspecifica/**, /api/v1/descuentoAplicado/**
+            - Path=/api/v1/repEspecifica/**
         - id: descuentos-service
           uri: lb://descuentos-service
           predicates:
-            - Path=/api/v1/descuentosPorNRep/**
+            - Path=/api/v1/descuentos/**
+        - id: recargos-service
+          uri: lb://recargos-service
+          predicates:
+            - Path=/api/v1/recargoPorKilometraje/**,/api/v1/recargoPorAntiguedad/**,/api/v1/recargos/**
+        - id: bonos-aplicados-service
+          uri: lb://bonos-aplicados-service
+          predicates:
+            - Path=/api/v1/bonoAplicado/**
