--- a/reportes-service.yaml
+++ b/reportes-service.yaml
@@ -1,13 +1,9 @@
 server:
   port: ${SERVER_PORT}
 spring:
-  datasource:
-    url: jdbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_DBNAME}
-    username: ${DB_USER}
-    password: ${DB_PASSWORD}
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: none
 eureka:
   instance:
     preferIpAddress: true
